tests/negative/symbols/use_undef3.orng
fn main() -> Int {
    let x: Int = undefined
    add(4, x)
}

fn add(x: Int, y: Int) -> Int { x + y }